31140 scrollbar js error fix

--- a/src/style/bem-blocks/b-custom-scrollbar/b-custom-scrollbar.mobile.less
+++ b/src/style/bem-blocks/b-custom-scrollbar/b-custom-scrollbar.mobile.less
@@ -13,13 +13,12 @@
     -moz-user-select: none; /* Для Firefox */
 
     &__thumb {
-        background: @dark-sky-blue;
+        background: @dark;
         opacity: 0.5;
         position: absolute;
         right: 0;
         width: 2px;
         height: 100%;
-        border-radius: 5px;
 
         transition: width, @animation-time;
     }
